Read and write protection disable target added

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,4 +36,14 @@ build_flags =
 	${env_gd32f130.build_flags}
 	-D EWRF_E7082VM=1
 
+[env:EWRF_E7082VM_remove_protections]
+platform = ststm32
+board = gd32f130g6
+src_filter = -<*>
+upload_protocol = custom
+upload_command =
+    openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; stm32f1x unlock 0; reset halt; exit;"
+    openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; wait_halt; stm32f1x mass_erase 0; sleep 200; reset halt; exit;"
+    #openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "program {${SOURCE}} verify reset; shutdown;"
+
 # -----------------------------
