--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,5 @@
 [platformio]
+default_envs = EWRF_E7082VM_bootloader
 
 [env]
 src_filter = +<*.c>
@@ -27,7 +28,7 @@ build_flags =
 
 # ----------
 
-[env:EWRF_E7082VM_bootloader]
+[EWRF_E7082VM_env]
 extends = env_gd32f130
 src_filter =
 	${env_gd32f130.src_filter}
@@ -35,6 +36,14 @@ src_filter =
 build_flags =
 	${env_gd32f130.build_flags}
 	-D EWRF_E7082VM=1
+
+[env:EWRF_E7082VM_bootloader]
+extends = EWRF_E7082VM_env
+upload_protocol = custom
+upload_command =
+    openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; stm32f1x unlock 0; reset halt; exit;"
+    openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; wait_halt; stm32f1x mass_erase 0; sleep 200; reset halt; exit;"
+    openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "program {${BUILD_DIR}/${PROGNAME}.elf} verify reset; shutdown;"
 
 [env:EWRF_E7082VM_remove_protections]
 platform = ststm32
@@ -44,6 +53,8 @@ upload_protocol = custom
 upload_command =
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; stm32f1x unlock 0; reset halt; exit;"
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; wait_halt; stm32f1x mass_erase 0; sleep 200; reset halt; exit;"
-    #openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "program {${SOURCE}} verify reset; shutdown;"
+
+[env:EWRF_E7082VM_bootloader_only]
+extends = EWRF_E7082VM_env
 
 # -----------------------------
