--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = EWRF_E7082VM_bootloader
+default_envs = Generic_GD32F130_bootloader
 
 [env]
 src_filter = +<*.c>
@@ -26,26 +26,17 @@ build_flags =
 	#-D HXTAL_VALUE=8000000
 	#-D __SYSTEM_CLOCK_72M_PLL_HXTAL=72000000U
 
-# ----------
+# -----------------------------
 
-[EWRF_E7082VM_env]
+[env:Generic_GD32F130_bootloader]
 extends = env_gd32f130
-src_filter =
-	${env_gd32f130.src_filter}
-	+<targets/EWRF_E7082VM/*.c>
-build_flags =
-	${env_gd32f130.build_flags}
-	-D EWRF_E7082VM=1
-
-[env:EWRF_E7082VM_bootloader]
-extends = EWRF_E7082VM_env
 upload_protocol = custom
 upload_command =
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; stm32f1x unlock 0; reset halt; exit;"
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; wait_halt; stm32f1x mass_erase 0; sleep 200; reset halt; exit;"
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "program {${BUILD_DIR}/${PROGNAME}.elf} verify reset; shutdown;"
 
-[env:EWRF_E7082VM_remove_protections]
+[env:Generic_GD32F130_remove_protections]
 platform = ststm32
 board = gd32f130g6
 src_filter = -<*>
@@ -54,7 +45,7 @@ upload_command =
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; stm32f1x unlock 0; reset halt; exit;"
     openocd -d2 -f interface/stlink.cfg -c "transport select hla_swd" -f target/stm32f1x.cfg -c "init; reset halt; wait_halt; stm32f1x mass_erase 0; sleep 200; reset halt; exit;"
 
-[env:EWRF_E7082VM_bootloader_only]
-extends = EWRF_E7082VM_env
+[env:Generic_GD32F130_bootloader_only]
+extends = env_gd32f130
 
 # -----------------------------
